# mageworkflow2

./: CMakeLists.txt  file_manager.cpp  file_manager.h  image_converter.cpp  image_converter.h  main.cpp
.github/workflows/: c-cpp.yml
gui/: create_job_dialog.cpp  create_job_dialog.h  create_job_dialog.ui  file_manager.h  main_window.cpp  main_window.h  main_window.ui
